# backtrack

./: .gitignore  CMakeLists.txt  README.md  backtrack.slnx
backtrack/: backtrack.rc  backtrack.vcxproj
backtrack/src/: main.cpp
backtrack/src/app/: Application.cpp  Application.h  RecorderController.cpp  RecorderController.h  VideoTimelineScheduler.h
backtrack/src/audio/: AudioMix.cpp  AudioMix.h  WasapiCapture.cpp  WasapiCapture.h  WavReader.cpp  WavReader.h
backtrack/src/capture/: D3D11FrameScaler.cpp  D3D11FrameScaler.h  D3DDevice.cpp  D3DDevice.h  DesktopDuplicationCapture.cpp  DesktopDuplicationCapture.h  ICaptureSource.h  WgcCaptureSource.cpp  WgcCaptureSource.h
backtrack/src/clips/: ClipManager.cpp  ClipManager.h
backtrack/src/core/: Logger.cpp  Logger.h  SpscQueue.h  Types.h
backtrack/src/encoder/: AmfEncoder.cpp  AmfEncoder.h  BitstreamUtils.cpp  BitstreamUtils.h  EncoderFactory.cpp  EncoderFactory.h  IEncoder.h  NvencEncoder.cpp  NvencEncoder.h
backtrack/src/hotkeys/: HotkeyService.cpp  HotkeyService.h
backtrack/src/integrations/: LeagueOfLegendsIntegration.cpp  LeagueOfLegendsIntegration.h
backtrack/src/mux/: Mp4Muxer.cpp  Mp4Muxer.h  RecoveryStore.cpp  RecoveryStore.h  WavWriter.cpp  WavWriter.h
backtrack/src/platform/: Win32Util.cpp  Win32Util.h
backtrack/src/replay/: ReplayBuffer.cpp  ReplayBuffer.h
backtrack/src/settings/: SettingsStore.cpp  SettingsStore.h
backtrack/src/ui/: ClipDragDrop.cpp  MainWindow.cpp  MainWindow.h  MainWindowController.cpp  MainWindowDiagnostics.cpp  MainWindowLayout.cpp  MainWindowLibrary.cpp  MainWindowMessages.cpp  MainWindowPages.cpp  MainWindowSettings.cpp  UiHelpers.cpp  UiHelpers.h  UiIds.h
backtrack/tests/: VideoTimelineSchedulerTests.cpp
docs/: architecture.md  gpu-optimization.md  profiling.md
